# middleware/island-validate.js
@@ -25,6 +25,36 @@ const saveIsland = (req, res, next) => {
   });
 };
 
+const updateIsland = (req, res, next) => {
+  if (Object.keys(req.body).length === 0) {
+    return res.status(400).json({ message: "Data to update cannot be empty!" });
+  }
+
+  const validationRule = {
+    name: 'string',
+    country: 'string',
+    population: 'numeric',
+    language: 'string',
+    capital: 'string',
+    subRegion: 'string',
+    climate: 'string',
+    mainIndustries: 'array',
+    elevation: 'numeric'
+  };
+
+  validator(req.body, validationRule, {}, (err, status) => {
+    if(!status) {
+      return res.status(412).json({
+        success: false,
+        message: 'Validation field',
+        data: err
+      })
+    }
+    next();
+  })
+}
+
 module.exports = {
-  saveIsland
+  saveIsland,
+  updateIsland
 };
