# routes/island.js
@@ -10,8 +10,10 @@ router.get('/:id', islandsController.getSingle);
 
 router.post('/', validation.saveIsland, islandsController.createIsland);
 
-router.put('/:id', validation.saveIsland, islandsController.updateIsland);
+router.put('/:id', validation.updateIsland, islandsController.updateIsland);
 
 router.delete('/:id', islandsController.deleteIsland);
+
+router.delete('/', islandsController.deleteAllIslands);
 
 module.exports = router;
